# edge_embeddings

./: main.py  pyproject.toml
notebook/: notebook.ipynb  unsupervised-edge-embeddings.ipynb
